// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-vue > should add vue-loader and VueLoaderPlugin correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/dist/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "experimentalInlineMatchResource": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    Plugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;

exports[`plugin-vue > should allow to configure vueLoader options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/dist/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "experimentalInlineMatchResource": true,
              "hotReload": false,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    Plugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;

exports[`plugin-vue > should define feature flags correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/dist/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "experimentalInlineMatchResource": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    Plugin {},
    DefinePlugin {
      "_options": {
        "__VUE_OPTIONS_API__": "true",
        "__VUE_PROD_DEVTOOLS__": "false",
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""test"",
      },
      "affectedHooks": undefined,
      "name": "DefinePlugin",
    },
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;
